获取菜单列表业务，逻辑优化（75%）